--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,13 @@
 {{ content }}
       </section>
     </div>
+    
+    <div class="comments">
+        {% if page.comments %}
+          {% include comments.ext %}
+        {% endif %}
+    </div>
+    
     <footer>
       <p>Project maintained by <a href="https://github.com/minixbeta">minixbeta</a></p>
       <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
