--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,11 +31,11 @@
 {{ content }}
       </section>
       
-      <div class="comments">
+      <section class="comments">
         {% if page.comments %}
           {% include comments.ext %}
         {% endif %}
-      </div>
+      </section>
       
     </div>
     
